
TO-DO WILDCRAFT STUFF:
-- Wildcraft fruits updated
-- Wildcraft nut butter added (like peanut butter, but with other nuts)
On hiatus until Wildcraft Herbs & Spices is updated
-- added herbs to Dressing
-- mixed herbs added
-- herbal soft dough added
-- pomace wine no longer crashes


2.0.0-dev.4
- Meathook placements adjusted yet again
- Soy milk changed to protein instead of dairy - MOSTLY DONE (check nutrition in foods/meals)
- Yogurt can be added to fruit bars in place of gelatin
- Pemmican can be placed in stacks
- Do stuff with bamboo shoots? idk
- Muffins and fruit bread have default visuals in the handbook
- Recipe notes added to meals in the handbook
- Meal descriptions added
- Handbook item grouping tightened up
- Fruit press handbook entry states the minimum amount needed to work
- Salt crystals mention they can only be made with a cauldron
- Salad meal guide mentions cooked meat is needed
- Dried peat bowl remapping done - DONE!!!

BUG FIXES:
- Primitive survival meat patches corrected for meals (cold pasta specifically)
- Hardened resin fixed so it hardens properly
- Chopped veggies go into porridge
- Peanut skins fixed so animals can eat them (egg shells fixed in ACA) - DONE!!!
- Meal names fixed in handbook

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- en.json cleansed of wildcraft text; generally cleaned up and reorganized
- Peanut skin model changed
- Soybean textures/shapes updated


2.0.0-dev.3
- Scrambled egg recipe fixed
- Scrambled egg shape updated & textures updated for all liquid egg variants
- All egg visuals updated; new boiled egg texture 
- Water-glassed eggs can be cracked now
- More Animals compatibility updated, while we're doing all this egg stuff


2.0.0-dev.2