@@ -22,7 +22,7 @@
 				"expandedfoods:clarifiedbrothportion-vegetable": { "saturation": 1, "health": 0.1, "foodcategory": "Vegetable"},
 				"expandedfoods:clarifiedbrothportion-meat": { "saturation": 1.25, "health": 0.1, "foodcategory": "Protein"},
 				"expandedfoods:clarifiedbrothportion-fish": { "saturation": 1, "health": 0.1, "foodcategory": "Protein"},
-				"expandedfoods:soymilk-edible": { "saturation": 1.125, "health": 0.1, "foodcategory": "Dairy"},
+				"expandedfoods:soymilk-edible": { "saturation": 1.125, "health": 0.1, "foodcategory": "Protein"},
     			"game:flour-rice" : { "saturation": 170, "foodcategory": "Grain" },
     			"game:flour-rye" : { "saturation": 140, "foodcategory": "Grain" },
     			"game:flour-spelt" : { "saturation": 140, "foodcategory": "Grain" },
