@@ -27,7 +27,7 @@
       "expandedfoods:clarifiedbrothportion-vegetable": { "saturation": 1.3, "health": 0.02, "foodcategory": "Vegetable" },
       "expandedfoods:clarifiedbrothportion-meat": { "saturation": 1.55, "health": 0.02, "foodcategory": "Protein" },
       "expandedfoods:clarifiedbrothportion-fish": { "saturation": 1.3, "health": 0.02, "foodcategory": "Protein" },
-      "expandedfoods:soymilk-edible": { "saturation": 1.125, "health": 0.01, "foodcategory": "Dairy" },
+      "expandedfoods:soymilk-edible": { "saturation": 1.125, "health": 0.01, "foodcategory": "Protein" },
       "expandedfoods:foodoilportion-*": { "saturation": 6, "health": 0.01, "foodcategory": "Vegetable" }
     },
     "side": "server",
