@@ -82,7 +82,6 @@ On hiatus until Wildcraft Herbs & Spices is updated
 
 2.0.0-dev.4
 - Meathook placements adjusted yet again
-- Soy milk changed to protein instead of dairy - MOSTLY DONE (check nutrition in foods/meals)
 - Yogurt can be added to fruit bars in place of gelatin
 - Pemmican can be placed in stacks
 - Do stuff with bamboo shoots? idk
@@ -93,7 +92,9 @@ On hiatus until Wildcraft Herbs & Spices is updated
 - Fruit press handbook entry states the minimum amount needed to work
 - Salt crystals mention they can only be made with a cauldron
 - Salad meal guide mentions cooked meat is needed
-- Dried peat bowl remapping done - DONE!!!
+
+REBALANCING:
+- Soy milk fully changed to protein instead of dairy - DONE!!!
 
 BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
@@ -113,6 +114,7 @@ MISC:
 - en.json cleansed of wildcraft text; generally cleaned up and reorganized
 - Peanut skin model changed
 - Soybean textures/shapes updated
+- Dried peat bowl remapping done - DONE!!!
 
 
 2.0.0-dev.3
